--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org/" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Index Page</title>
+    <title>Recipe Home</title>
 </head>
 <body>
-<h2>My Recipes</h2>
+<h1>My Recipes</h1>
+
+<table>
+    <tr>
+        <th>ID</th>
+        <th>Description</th>
+    </tr>
+    <tr th:each="${recipe:${recipes}}">
+        <td th:text="${recipe.id}">123</td>
+        <td th:text="${recipe.description}">Tasty Goodness</td>
+    </tr>
+</table>
 </body>
 </html>
